--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section id="grid">
       <div class="signin">
         <div class="content">
-          <h2>Distribucion binomial</h2>
+          <h2>Distribución binomial</h2>
           <div class="form">
             <!-------------------------entradas del usuario------------------->
             <h3>Experimentos Aleatorios:</h3>
